--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fast-csv": "^2.3.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
